package it.dosti.justit.bean;

import java.util.List;

public class TimeSlotBean {
    private List<String> timeSlots;


    public List<String> getTimeSlots() {
        return timeSlots;
    }

    public void setTimeSlots(List<String> timeSlots) {
        this.timeSlots = timeSlots;
    }

}
