package it.dosti.justit.model;

public enum TimeSlot {
    MORNING,
    AFTERNOON,
    EVENING,
}
