@startuml

title VOPC Book Appointment

skinparam class {
BackgroundColor<<controller>> PowderBlue
BackgroundColor<<bean>> White
BackgroundColor<<entity>> MistyRose
BackgroundColor<<boundary>> LemonChiffon
BackgroundColor<<singleton>> palegreen
BackgroundColor<<dao>> Silver

}

class BookAppointmentController <<(C) controller>> {
    + reserveSlotBooking(BookingBean: bookingBean, SessionBean: bean): PaymentQuoteBean
    + getAvailableSlots(SessionBean session, LocalDate date): List<BookingBean>: TimeSlotBean
    + finalizePayment(PaymentDataBean paymentDataBean, PaymentQuoteBean paymentQuoteBean): void
    + cancelBookingByBoundary(PaymentQuoteBean bean): void
    - abortBooking(Booking booking): void
    - notifyStatusChange(Booking booking)
}

class ProcessPaymentController <<(C) controller>> {
+ refundReservationPayment(Booking booking, double amount): void
+ processPayment(Booking booking, String cardNumber, double amount): void
}

class BookAppointmentBoundary <<(B) boundary>>{
    + bookAppointment(): void
    + payReservationFee(): void
}

class ShopPageBoundary <<(B) boundary>>{
    + onBookingClicked(): void
    + updateReviewList(): void
}

class SessionManager <<(S) singleton>>{
    + getActiveSession(String sessionId): session
}

entity User <<entity>>{
}

entity Shop <<entity>>{
}


entity BookingBean <<(B) bean>> {

}

entity TimeSlotBean <<(B) bean>> {
}

entity PaymentQuoteBean <<(B) bean>>{
}
entity PaymentDataBean <<(B) bean>> {
}

class BookingDAO <<(D) DAO>>{
  + existBooking(Booking booking): boolean
  + addBooking(Booking: booking): Integer
  + updateStatus(Booking booking): void
}

entity Booking <<entity>>{
-bookingId: Long;
-shop: Shop
-user: User
-date: LocalDate
-timeSlot: TimeSlot
-description: String
-homeAssistance: boolean
-reservationPaymentTransactionId: String
-createdAt: LocalDateTime
-currentState: BookingState
-status: BookingStatus
-repairReport: RepairReport
-invoice: Invoice
    + calculateTotalReservationPrice(): double
    + pay(BookingStatus newStatus): void

}

entity Session{
-User loggedUser
-Shop selectedShop
+getLoggedUser(): User
+getCurrentShop(): Shop
}

enum TimeSlot {
  MORNING,
  AFTERNOON
  EVENING
}

enum BookingStatus {
  PENDING_PAYMENT
  PENDING_CONFIRM
  CONFIRMED
  REJECTED
  COMPLETED
}



ShopPageBoundary -d- BookAppointmentController
BookAppointmentBoundary -d- BookAppointmentController
BookAppointmentBoundary .r. BookingBean
BookAppointmentController .u. BookingBean
BookAppointmentController -l- SessionManager
Booking -- User
Booking -- Shop
BookAppointmentController -d- BookingDAO
BookAppointmentController -- Booking
BookAppointmentController -u- ProcessPaymentController
BookAppointmentBoundary .r. TimeSlotBean
BookAppointmentBoundary .r. PaymentQuoteBean
BookAppointmentBoundary .r. PaymentDataBean
BookAppointmentController .u. TimeSlotBean
BookAppointmentController .u. PaymentQuoteBean
BookAppointmentController .u. PaymentDataBean
Session -- SessionManager

BookingDAO -- Booking
Booking -r- TimeSlot
Booking -l- BookingStatus

@enduml
